Title Gap Above correction

--- a/css/menikah.css
+++ b/css/menikah.css
@@ -729,3 +729,8 @@ body.preloader-site {
   text-align: center; /* Ensures it's centered */
 }
 
+
+/* To Reducve the Gap Above Title of every page */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+}
